--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^5.11.17",
     "uuid": "^8.3.2"
   },
